--- a/HelloSayerLib/HelloSayerLib.vcxproj
+++ b/HelloSayerLib/HelloSayerLib.vcxproj
@@ -93,14 +93,14 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>..\..\..\..\external\boost_1_72_0\;..\..\..\..\external\eigen-3.3.5\;..\..\..\source\PhysicsEngine;..\..\..\..\external\pyinclude\;..\..\..\..\external\pybind11\include\;..\..\..\source\util\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\pybind11\include\;..\dll\include\;$(USERPROFILE)\anaconda3\include</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>pch.h</ForcedIncludeFiles>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>..\..\..\..\external\pylibs\;..\..\..\..\external\boost_1_72_0\stage\lib\</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(USERPROFILE)\anaconda3\libs\;</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>copy /Y $(SolutionDir)$(Platform)\$(Configuration)\$(ProjectName).dll $(SolutionDir)python\$(ProjectName).pyd</Command>
@@ -157,7 +157,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>..\..\..\..\external\boost_1_72_0\;..\..\..\..\external\eigen-3.3.5\;..\..\..\source\PhysicsEngine;..\..\..\..\external\pyinclude\;..\..\..\..\external\pybind11\include\;..\..\..\source\util\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\pybind11\include\;..\dll\include\;$(USERPROFILE)\anaconda3\include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <ForcedIncludeFiles>pch.h</ForcedIncludeFiles>
     </ClCompile>
@@ -166,7 +166,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>..\..\..\..\external\pylibs\;..\..\..\..\external\boost_1_72_0\stage\lib\</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(USERPROFILE)\anaconda3\libs\;</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>copy /Y $(SolutionDir)$(Platform)\$(Configuration)\$(ProjectName).dll $(SolutionDir)python\$(ProjectName).pyd</Command>
