--- a/HelloSayerLib/HelloSayerLib.vcxproj.filters
+++ b/HelloSayerLib/HelloSayerLib.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\source\HelloSayer.h">
+    <ClInclude Include="..\source\HelloSayerLib.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
