--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# python artifacts
+
+*.pyd
+*.pyc
+
 # User-specific files
 *.rsuser
 *.suo
