--- a/HelloSayerLibCppTest/HelloSayerLibCppTest.vcxproj.filters
+++ b/HelloSayerLibCppTest/HelloSayerLibCppTest.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="HelloSayerLibCppTest.cpp">
+    <ClCompile Include="..\source\HelloSayerLibCppTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
