--- a/HelloSayerLib/HelloSayerLib.vcxproj
+++ b/HelloSayerLib/HelloSayerLib.vcxproj
@@ -103,10 +103,17 @@
       <AdditionalLibraryDirectories>$(USERPROFILE)\anaconda3\libs;..\..\..\debug_libs\boost_1_72_0\stage\lib;</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y $(SolutionDir)$(Platform)\$(Configuration)\$(ProjectName).dll $(SolutionDir)python\$(ProjectName).pyd</Command>
+      <Command>git branch --show-current &gt; _gitbranch.txt
+set /P GIT_BRANCH=&lt;_gitbranch.txt
+echo "Copying HelloSayer.dll from git branch %GIT_BRANCH% to python .pyd file..."
+copy /Y $(SolutionDir)$(Platform)\$(Configuration)\$(ProjectName).dll $(SolutionDir)python\$(ProjectName)-%GIT_BRANCH:/=-%.pyd 
+echo "Copying python37.dll to C++ target directory..."
+copy $(USERPROFILE)\anaconda3\envs\npe\python37.dll $(SolutionDir)$(Platform)\$(Configuration)
+del _gitbranch.txt</Command>
     </PostBuildEvent>
     <PreBuildEvent>
-      <Command>copy $(USERPROFILE)\anaconda3\python37.dll $(SolutionDir)$(Platform)\$(Configuration)\</Command>
+      <Command>
+      </Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -172,10 +179,17 @@
       <AdditionalLibraryDirectories>$(USERPROFILE)\anaconda3\libs;..\..\..\..\external\boost_1_72_0\stage\lib;</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y $(SolutionDir)$(Platform)\$(Configuration)\$(ProjectName).dll $(SolutionDir)python\$(ProjectName).pyd</Command>
+      <Command>git branch --show-current &gt; _gitbranch.txt
+set /P GIT_BRANCH=&lt;_gitbranch.txt
+echo "Copying HelloSayer.dll from git branch %GIT_BRANCH% to python .pyd file..."
+copy /Y $(SolutionDir)$(Platform)\$(Configuration)\$(ProjectName).dll $(SolutionDir)python\$(ProjectName)-%GIT_BRANCH:/=-%.pyd 
+echo "Copying python37.dll to C++ target directory..."
+copy $(USERPROFILE)\anaconda3\envs\npe\python37.dll $(SolutionDir)$(Platform)\$(Configuration)
+del _gitbranch.txt</Command>
     </PostBuildEvent>
     <PreBuildEvent>
-      <Command>copy $(USERPROFILE)\anaconda3\python37.dll $(SolutionDir)$(Platform)\$(Configuration)\</Command>
+      <Command>
+      </Command>
     </PreBuildEvent>
     <PreBuildEvent>
       <Message>
