--- a/HelloSayerLib/HelloSayerLib.vcxproj
+++ b/HelloSayerLib/HelloSayerLib.vcxproj
@@ -168,7 +168,7 @@ del _gitbranch.txt</Command>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions);SOLUTION_DIR=R"($(SolutionDir))";</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>..\source;..\..\..\..\external\boost_1_72_0\;$(USERPROFILE)\miniconda3\envs\npe\Lib\site-packages\pybind11\include;$(USERPROFILE)\miniconda3\envs\npe\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\source;$(USERPROFILE)\miniconda3\envs\noetic\Library\include;$(USERPROFILE)\miniconda3\envs\noetic\include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <ForcedIncludeFiles>pch.h</ForcedIncludeFiles>
       <AdditionalOptions>/DHAVE_SNPRINTF %(AdditionalOptions)</AdditionalOptions>
@@ -178,7 +178,7 @@ del _gitbranch.txt</Command>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(USERPROFILE)\miniconda3\libs;..\..\..\..\external\boost_1_72_0\stage\lib;</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(USERPROFILE)\miniconda3\libs;$(USERPROFILE)\miniconda3\envs\noetic\Library\lib</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>git branch --show-current &gt; _gitbranch.txt
